--- a/Components/Home/Start/Start.scss
+++ b/Components/Home/Start/Start.scss
@@ -1,6 +1,27 @@
 
-/* .startContainer
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap');
+ .startContainer
 {
     display: flex;
     flex: 1;
-} */
+    justify-content: center;
+    align-items: center;
+    
+    
+} 
+
+.startTitle
+{
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
+}
+
+
+.startAnimation
+{
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
