--- a/Components/Movies/Movies.scss
+++ b/Components/Movies/Movies.scss
@@ -5,12 +5,11 @@
     text-align: center;
     font-weight: bold;
     font-size: 30px;
+    margin-top: 20%;
+    margin-bottom: 5%;
 }
 
-.moviesContainer
-{
-    margin-top: 20%;
-}
+
 
 .moviesPageIcon
 {
