--- a/UI/CustomButtons/CustomButton.scss
+++ b/UI/CustomButtons/CustomButton.scss
@@ -21,3 +21,19 @@
     font-size: 20px;
 }
 
+
+.detailsBtn
+{
+    border : 5px solid transparent;
+    width: 150px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    border-radius: 30px;
+    background-color: #FEC868;
+    margin-left: auto;
+    margin-right: auto;
+}
+
