--- a/UI/CustomButtons/CustomButton.scss
+++ b/UI/CustomButtons/CustomButton.scss
@@ -34,6 +34,7 @@
     border-radius: 30px;
     background-color: #FEC868;
     margin-left: auto;
-    margin-right: auto;
+
+    margin-top: 10px;
 }
 
