--- a/Components/Movie/Movie.scss
+++ b/Components/Movie/Movie.scss
@@ -1,9 +1,9 @@
 .MovieContainer
 {
     background-color: #FF7F3F;
-    margin: 30px;
-    padding: 10%;
-    border-radius: 50px;
+    margin: 20px;
+    border-radius: 20px;
+    height: 350px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -17,7 +17,6 @@
 {
     width: 150px;
     height: 200px;
-    margin-top:10%;
 }
 
 
