--- a/Components/Movie/Movie.scss
+++ b/Components/Movie/Movie.scss
@@ -3,11 +3,12 @@
     background-color: #FF7F3F;
     margin: 20px;
     border-radius: 20px;
-    height: 350px;
+    height: 400px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    align-items : center;
+    padding: 5%;
 
 }
 
@@ -30,7 +31,7 @@
     font-weight: bold;
     font-size: 20px;
     text-align: center;
-    margin-left: 25px;
+    
 }
 
 
