--- a/UI/CustomButtons/CustomButton.scss
+++ b/UI/CustomButtons/CustomButton.scss
@@ -47,3 +47,17 @@
     justify-content: center;
 }
 
+.ulpoadbtn 
+{
+    
+    border : 3px solid transparent;
+    width: 50%;
+    height: 60px;
+    
+    border-radius: 10px;
+    background-color: #525FE1;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    padding: 2%;
+}
