--- a/Components/Classification/Classification.scss
+++ b/Components/Classification/Classification.scss
@@ -30,5 +30,8 @@
 {
     height: 300px;
     width: 300px;
-    margin: 10%;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    margin-left: auto;
+    margin-right: auto;
 }
