--- a/Components/Classification/Classification.scss
+++ b/Components/Classification/Classification.scss
@@ -28,10 +28,19 @@
 
 .pickedImg
 {
-    height: 300px;
-    width: 300px;
+    height: 700px;
+    width: 500px;
     margin-top: 10%;
     margin-bottom: 5%;
     margin-left: auto;
     margin-right: auto;
 }
+
+.loadingAnimation
+{
+    height: 300px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
