--- a/Components/Detailes/Trailer/Traile.scss
+++ b/Components/Detailes/Trailer/Traile.scss
@@ -1,4 +1,19 @@
 .trailerContainer
 {
-    margin: 10%;
+    margin: 8%;
+}
+
+
+.tratilerText
+{
+    font-weight: bold;
+    font-size: 25px;
+    text-align: center;
+    color: #181823;
+}
+
+
+.textView
+{
+    margin-bottom: 10%;
 }
