--- a/Components/Classification/Classification.scss
+++ b/Components/Classification/Classification.scss
@@ -29,7 +29,7 @@
 .pickedImg
 {
     height: 700px;
-    width: 500px;
+    width: 90%;
     margin-top: 10%;
     margin-bottom: 5%;
     margin-left: auto;
